# covid-tracker-rs

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  uninstall.sh
src/: functions.rs  lib.rs  main.rs
