[package]
name = "covid"
version = "0.1.0"
authors = ["Mohammad Aadil Shabier <aadilshabier1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
error-chain = "0.12.4"
serde_json = "1.0"
chrono = "0.4.19"

